app/assets/stylesheets/masthead.css.scss
#malmo-masthead {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
  background-color: $mastheadBackground;
  @include box-shadow(0 2px 2px rgba(0, 0, 0, .2));
  min-width: 56em;

  #nav-search-trigger,
  #nav-menu-trigger,
  > nav > ul > li {
    float: left;
    > a {
      display: block;
      @include box-sizing(border-box);
      overflow: hidden;
      white-space: nowrap;
      padding: emize(13, 13) 1em emize(14, 13);
      margin: 0 -1px 0 0;
      color: $mastheadColor;
      font-family: $sansSerif;
      font-size: emize(13);
      line-height: emize(15, 13);
      height: emize(41, 13);
      outline: 0;
      border: transparent solid;
      border-width: 0 1px;
      &.dropdown-toggle {
        padding-right: .8em;
        color: $mastheadColor;
      }
      &.dropdown-toggle.more-items {
        span.icon-caret-down {
          line-height: .8;
          margin-left: .3em;
        }
      }
      &.dropdown-toggle.no-arrow {
        padding-right: 1em;
      }
    }
    > a:hover,
    > a:focus,
    &.open > a {
      background: $mastheadBackgroundHighlight;
      border-color: transparent $mastheadColor;
    }
    ul.dropdown-menu {
      top: 3.1em;
      white-space: nowrap;
    }
  }
  > nav#masthead-others > ul {
    li {
      float: right;
    }
    li.phone a span {
      position: relative;
      top: emize(-1, 13);
    }
    li.map a  span {
      position: relative;
      top: emize(-2, 13);
    }
  }

  #nav-menu-trigger, #nav-search-trigger {
    float: right;
    a {
      span.icon-reorder {
        margin-left: .3em;
        line-height: .8;
      }
      span.icon-search {
        margin-left: .4em;
        line-height: .8;
        position: relative;
        top: -1px;
      }
    }
  }

  #nav-search-trigger a:hover {
    border-right-color: black;
  }

  #nav-menu-trigger {
    // Activated in media_queries.scss
    display: none;
  }

  #nav-my-department, #nav-my-workingfield {
    .icon-caret-down {
      display: none;
    }
  }

  // Search box
  #masthead-search {
    display: none;
    position: absolute;
    @include box-sizing(border-box);
    right: 0;
    padding: 1.4em;
    border: $border;
    @include radius(0 0 0 3px);
    @include box-shadow(2px 2px 3px rgba(0, 0, 0, .2));
    background: $backgroundLight;
    form {
      margin-bottom: 0;
    }
    input[type=text] {
      width: 20em;
    }
  }

  .nav-logo {
    display: block;
    float: left;
    padding: 0 0 0 .5em;
    font-family: $sansSerif;
    line-height: 1;
    background: url("logo-x1.png") 10px 5px no-repeat;
    background-size: 24px;
    a {
      display: block;
      color: $mastheadColorHighlight;
      @include box-sizing(border-box);
      padding: emize(6) emize(12) emize(6) emize(24);
      border: none;
      font-weight: bold;
      font-size: emize(23);
      line-height: 1;
      text-transform: uppercase;
    }
  }
}

// Add on of the class selectors to the body
// to get an active nav item
.malmo-masthead-dashboard #nav-dashboard,
.malmo-masthead-my-department #nav-my-department,
.malmo-masthead-my-workingfield #nav-my-workingfield,
.malmo-masthead-our-organization #nav-our-organization,
.malmo-masthead-hrutan #nav-hrutan,
.malmo-masthead-more #nav-more-items,
.malmo-masthead-map #masthead-others .map,
.malmo-masthead-search #nav-search-trigger {
  > a {
    background: $mastheadBackgroundHighlight;
    border-color: transparent $mastheadColor;
  }
}
.malmo-masthead-search #nav-search-trigger > a {
  border-left: 1px solid $mastheadColor !important;
}

.service-title, .app-title {
  padding: .5em .9em;
  line-height: 1;
  margin: 0 0 1em;
  background-color: $backgroundLight;
  border: $border;
  border-width: 1px 0;
  font-size: emize(13);
  font-weight: normal;
  font-family: $sansSerif;
  a {
    color: black;
  }
}

